@@ -12,7 +12,6 @@ import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static ch.admin.bag.covidcertificate.api.Constants.ISSUER;
 import static ch.admin.bag.covidcertificate.api.Constants.VERSION;
@@ -43,7 +42,7 @@ public class VaccinationTouristCertificateQrCodeMapper {
                         vaccinationTouristCertificateDataDto,
                         issuableVaccineDto
                 )
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     private static VaccinationTouristCertificateData toVaccinationTouristCertificateData(
